# oneCreditCard

./: .gitignore  AGENTS.md  README.md  REQUIREMENTS.md  ai.md  build.sh  oneCreditCard.code-workspace  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/instructions/: mapping-flow.instructions.md  parsers.instructions.md  python-tests.instructions.md
.github/prompts/: create-pr.prompt.md  refactor-parser.prompt.md  validate-workspace.prompt.md
.github/workflows/: codeql.yml  release.yml
doc/development/: 01-implementation-guide.md  02-development-setup.md  02-parsing-implementation.md  03-ods-generation.md  03-performance-guidelines.md  README.md
doc/requirements/: 01-input-format.md  01-project-overview.md  02-input-format.md  02-output-format.md  03-output-format.md  03-transaction-processing.md  04-executable-build.md  04-formal-requirements.md  04-technical-implementation.md  05-versioning.md  README.md
doc/technical/: 01-architecture.md  02-account-mapping.md  03-configuration-format.md  03-parsing-implementation.md  04-ods-generation.md  04-test-strategy.md  05-code-organization.md  05-configuration-format.md  06-executable-build.md  06-test-strategy.md  07-code-organization.md  07-versioning-release.md  README.md
src/: accountMapper.py  configuration.py  logging_config.py  main.py  odsGenerator.py  transactionGrouper.py
src/parser/: directoryParser.py  textParser.py
src/parsers/: __init__.py  directoryParser.py  transaction.py
tests/: conftest.py  test_main.py
tests/e2e/: test_main.py
tests/fixtures/: onecreditcard.json
tests/fixtures/inputs/: 2025-07_1.txt  2025-07_2.txt  2025-08_2.txt
tests/int/: test_odsGenerator.py  test_pipeline.py
tests/int/parser/: test_directoryParser.py
tests/int/parsers/: conftest.py  test_directoryParser.py
tests/integration/testData/: 2025-07.ods  2025-08.ods  2025-08_1.txt  2025-09.ods  2025-09_1.txt  2025-09_2.txt
tests/unit/: test_accountMapper.py  test_configuration.py  test_directoryParser.py  test_textParser.py  test_transactionGrouper.py  test_version.py
tests/unit/parser/: test_transaction.py
tests/unit/parsers/: test_textParser.py  test_transaction.py
